// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutocompleteSearch integration tests is a snapshot with English localization 1`] = `
<div
  class="relative undefined"
  data-testid="test-autocomplete-search"
>
  <div>
    <form>
      <div
        role="search"
      >
        <label
          class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
          for="test-autocomplete-search"
        >
          autocomplete-search
        </label>
        <div
          class="relative"
        >
          <input
            class="outline-none w-full h-[2.25rem] py-2 pl-[0.375rem] pr-8 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350"
            id="test-autocomplete-search"
            name="autocomplete-search"
            type="text"
            value=""
          />
          <button
            class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
          >
            <span
              class="inline-flex items-center"
            >
              <svg
                class="w-6 h-6 p-0.5 fill-current"
                viewBox="0 0 32 32"
              >
                <use
                  href="/assets/icons/loupe.svg#loupe"
                />
              </svg>
              To find
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    class="mt-2 rounded-[0.1875rem] border-2 shadow-sm absolute w-full bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 transition-colors duration-150 "
  >
    <div
      class="p-[0.625rem] flex items-center justify-center flex-col text-neutral-1000 dark:text-dark-neutral-800 transition-colors duration-150"
    >
      <svg
        class="w-[5rem] h-[5rem] mb-5 fill-current"
        viewBox="0 0 32 32"
      >
        <use
          href="/assets/icons/broken-loupe.svg#broken-loupe"
        />
      </svg>
      <h4
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-300 font-regular mb-3 break-all text-neutral-1000 dark:text-dark-neutral-800"
      >
        We can't find anything for 'value'
      </h4>
      <p
        class="text-neutral-900 dark:text-dark-neutral-700 transition-colors duration-150"
      >
        Try a different term or name.
      </p>
    </div>
  </div>
</div>
`;

exports[`AutocompleteSearch integration tests is a snapshot with Russian localization 1`] = `
<div
  class="relative undefined"
  data-testid="test-autocomplete-search"
>
  <div>
    <form>
      <div
        role="search"
      >
        <label
          class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
          for="test-autocomplete-search"
        >
          autocomplete-search
        </label>
        <div
          class="relative"
        >
          <input
            class="outline-none w-full h-[2.25rem] py-2 pl-[0.375rem] pr-8 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350"
            id="test-autocomplete-search"
            name="autocomplete-search"
            type="text"
            value=""
          />
          <button
            class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
          >
            <span
              class="inline-flex items-center"
            >
              <svg
                class="w-6 h-6 p-0.5 fill-current"
                viewBox="0 0 32 32"
              >
                <use
                  href="/assets/icons/loupe.svg#loupe"
                />
              </svg>
              Найти
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    class="mt-2 rounded-[0.1875rem] border-2 shadow-sm absolute w-full bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 transition-colors duration-150 "
  >
    <div
      class="p-[0.625rem] flex items-center justify-center flex-col text-neutral-1000 dark:text-dark-neutral-800 transition-colors duration-150"
    >
      <svg
        class="w-[5rem] h-[5rem] mb-5 fill-current"
        viewBox="0 0 32 32"
      >
        <use
          href="/assets/icons/broken-loupe.svg#broken-loupe"
        />
      </svg>
      <h4
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-300 font-regular mb-3 break-all text-neutral-1000 dark:text-dark-neutral-800"
      >
        Мы ничего не смогли найти по значению 'value'
      </h4>
      <p
        class="text-neutral-900 dark:text-dark-neutral-700 transition-colors duration-150"
      >
        Попробуйте другое понятие или название.
      </p>
    </div>
  </div>
</div>
`;

exports[`AutocompleteSearch tests is a basic snapshot 1`] = `
<div
  class="relative undefined"
  data-testid="test-autocomplete-search"
>
  <div>
    <form>
      <div
        role="search"
      >
        <label
          class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
          for="test-autocomplete-search"
        >
          autocomplete-search
        </label>
        <div
          class="relative"
        >
          <input
            class="outline-none w-full h-[2.25rem] py-2 pl-[0.375rem] pr-8 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350"
            id="test-autocomplete-search"
            name="autocomplete-search"
            type="text"
            value=""
          />
          <button
            class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
          >
            <span
              class="inline-flex items-center"
            >
              <svg
                class="w-6 h-6 p-0.5 fill-current"
                viewBox="0 0 32 32"
              >
                <use
                  href="/assets/icons/loupe.svg#loupe"
                />
              </svg>
              To find
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    class="mt-2 rounded-[0.1875rem] border-2 shadow-sm absolute w-full bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 transition-colors duration-150 "
  >
    <div
      class="p-[0.625rem] flex items-center justify-center flex-col text-neutral-1000 dark:text-dark-neutral-800 transition-colors duration-150"
    >
      <svg
        class="w-[5rem] h-[5rem] mb-5 fill-current"
        viewBox="0 0 32 32"
      >
        <use
          href="/assets/icons/broken-loupe.svg#broken-loupe"
        />
      </svg>
      <h4
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-300 font-regular mb-3 break-all text-neutral-1000 dark:text-dark-neutral-800"
      >
        We can't find anything for 'value'
      </h4>
      <p
        class="text-neutral-900 dark:text-dark-neutral-700 transition-colors duration-150"
      >
        Try a different term or name.
      </p>
    </div>
  </div>
</div>
`;

exports[`AutocompleteSearch tests is a snapshot when initialOptions and options are empty 1`] = `
<div
  class="relative undefined"
  data-testid="test-autocomplete-search"
>
  <div>
    <form>
      <div
        role="search"
      >
        <label
          class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
          for="test-autocomplete-search"
        >
          autocomplete-search
        </label>
        <div
          class="relative"
        >
          <input
            class="outline-none w-full h-[2.25rem] py-2 pl-[0.375rem] pr-8 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350"
            id="test-autocomplete-search"
            name="autocomplete-search"
            type="text"
            value=""
          />
          <button
            class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
          >
            <span
              class="inline-flex items-center"
            >
              <svg
                class="w-6 h-6 p-0.5 fill-current"
                viewBox="0 0 32 32"
              >
                <use
                  href="/assets/icons/loupe.svg#loupe"
                />
              </svg>
              To find
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    class="mt-2 rounded-[0.1875rem] border-2 shadow-sm absolute w-full bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 transition-colors duration-150 "
  >
    <div
      class="p-[0.625rem] flex items-center justify-center flex-col text-neutral-1000 dark:text-dark-neutral-800 transition-colors duration-150"
    >
      <svg
        class="w-[5rem] h-[5rem] mb-5 fill-current"
        viewBox="0 0 32 32"
      >
        <use
          href="/assets/icons/broken-loupe.svg#broken-loupe"
        />
      </svg>
      <h4
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-300 font-regular mb-3 break-all text-neutral-1000 dark:text-dark-neutral-800"
      >
        We can't find anything for 'value'
      </h4>
      <p
        class="text-neutral-900 dark:text-dark-neutral-700 transition-colors duration-150"
      >
        Try a different term or name.
      </p>
    </div>
  </div>
</div>
`;

exports[`AutocompleteSearch tests is a snapshot with isLoading is true 1`] = `
<div
  class="relative undefined"
  data-testid="test-autocomplete-search"
>
  <div>
    <form>
      <div
        role="search"
      >
        <label
          class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
          for="test-autocomplete-search"
        >
          autocomplete-search
        </label>
        <div
          class="relative"
        >
          <input
            class="outline-none w-full h-[2.25rem] py-2 pl-[0.375rem] pr-8 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350"
            id="test-autocomplete-search"
            name="autocomplete-search"
            type="text"
            value=""
          />
          <button
            class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
          >
            <span
              class="inline-flex items-center"
            >
              <svg
                class="w-6 h-6 p-0.5 fill-current"
                viewBox="0 0 32 32"
              >
                <use
                  href="/assets/icons/loupe.svg#loupe"
                />
              </svg>
              To find
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    class="mt-2 rounded-[0.1875rem] border-2 shadow-sm absolute w-full bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 transition-colors duration-150 relative min-h-[12.5rem]"
  >
    <span
      class="inline-flex align-middle dark:text-blue-300 text-blue-800 transition-colors duration-150 w-24 h-24 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
      data-testid="test-spinner"
    >
      <svg
        class="animate-spin stroke-[0.75] fill-none stroke-current"
        viewBox="0 0 16 16"
      >
        <circle
          cx="8"
          cy="8"
          r="7"
          stroke-dasharray="60"
          stroke-dashoffset="50"
          stroke-linecap="round"
        />
      </svg>
    </span>
  </div>
</div>
`;
